Updated css to fix bug on Firefox.

--- a/css/main.css
+++ b/css/main.css
@@ -467,6 +467,7 @@ a[data-toggle="collapse"] {
 
 a.portfolio-column {
   text-align: center;
+  text-align: -moz-center;
   text-decoration: none;
 }
 
